feat: Implement creating new element instance